--- a/models/email.html
+++ b/models/email.html
@@ -2,72 +2,124 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Demystifying Email Design</title>
+    <title>FireTicket - Online Ticket </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body style="margin: 0; padding: 0;">
 <table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
     <tr>
-        <td align="center" bgcolor="#70bbd9" style="padding: 40px 0 30px 0;">
-            <img src="" alt="Fire Ticket E-mail" width="300" height="50" style="display: block;" />
+        <td align="center" bgcolor="#fff" style="padding: 40px 0 30px 0;">
+            <img src="https://img.freepik.com/free-vector/cinema-ticket_1459-2366.jpg?size=338&ext=jpg" alt="Fire Ticket E-mail" width="300" height="250" style="display: block;" />
         </td>
     </tr>
     <tr>
         <td bgcolor="#ffffff">
-            <table border="0" cellpadding="0" cellspacing="0" width="100%">
+            <table border="0" cellpadding="" cellspacing="0" width="100%">
                 <tr>
                     <td style="color: #153643; font-family: Arial, sans-serif; font-size: 24px;">
-                        <b>Ola, esse e o seu bilhete de confirmacao para o evento </b>
+                        <b>Ola, esse e o seu bilhete de confirmacao para o evento </b><a style="text-decoration: none;color:Tomato;font-size:20px" href="">VODACOM MFW
+                    </a>
                     </td>
                 </tr>
                 <tr>
-                    <td style="color: #153643; font-family: Arial, sans-serif; font-size: 12px;">
-                        <b>Organizado por</b>
+                    <td style="color: #153643; font-family: Arial, sans-serif; font-size: 14px;">
+                        <b>Organizado por ROM Entretenimento </b>
+                        <hr>
                     </td>
                 </tr>
                 <tr>
-                    <td style="padding: 20px 0 30px 0;color: #153643; font-family: Arial, sans-serif; font-size: 16px; line-height: 20px;">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tempus adipiscing felis, sit amet blandit ipsum volutpat sed. Morbi porttitor, eget accumsan dictum, nisi libero ultricies ipsum, in posuere mauris neque at erat.
-                    </td>
-                </tr>
+                    <td style="padding: 20px 0px 20px 0px;color: #153643;background-color: #e0e0e0; font-family: Arial, sans-serif; font-size: 16px; line-height: 20px;">
+                        <table style= "align="center"; color:#4d90fe;" border="0" cellpadding="5" cellspacing="0" width="100%">
                 <tr>
+                    <td style="color: #153643; font-family: Arial, sans-serif; font-size: 16px;">
+                        <b>Order Summary</b>
+                        <hr>
+                    </td>
                     <td>
 
                     </td>
+                    <td style="color: #153643; font-family: Arial, sans-serif; font-size: 16px;">
+                        <b>Data e Hora</b>
+                        <hr>
+                    </td>
                 </tr>
-            </table>
-        </td>
-    </tr>
-    <tr>
-        <td bgcolor="#ee4c50" style="padding: 30px 30px 30px 30px;">
-            <table border="0" cellpadding="0" cellspacing="0" width="100%">
                 <tr>
-                    <td width="75%" style="color: #ffffff; font-family: Arial, sans-serif; font-size: 14px;">
-                        &reg; Alguém, Algum lugar 2014<br/>
-                        <a href="#" style="color: #ffffff;"><font color="#ffffff">
-                            Remova sua inscrição</font></a> dessa e-mail marketing, instantaneamente
+                    <td style="color: #153643; font-family: Arial, sans-serif; font-size: 16px;">
+                        Order #: 684317282
+                        <hr>
                     </td>
-                    <td align="right">
-                        <table border="0" cellpadding="0" cellspacing="0">
-                            <tr>
-                                <td>
-                                    <a href="http://www.twitter.com/">
-                                        <img src="images/tw.gif" alt="Twitter" width="38" height="38" style="display: block;" border="0" />
-                                    </a>
-                                </td>
-                                <td style="font-size: 0; line-height: 0;" width="20">&nbsp;</td>
-                                <td>
-                                    <a href="http://www.twitter.com/">
-                                        <img src="images/fb.gif" alt="Facebook" width="38" height="38" style="display: block;" border="0" />
-                                    </a>
-                                </td>
-                            </tr>
-                        </table>
+                    <td style="color: #153643; font-family: Arial, sans-serif; font-size: 16px;">
+
+                    </td>
+                    <td>
+                        Dezember 05, 2018 23 : 00
+                        <hr>
                     </td>
                 </tr>
+                <tr>
+                    <td style="color: #153643; font-family: Arial, sans-serif; font-size: 16px;">
+                        <b>Nome</b>
+                        <hr>
+                    </td>
+                    <td style="color: #153643; font-family: Arial, sans-serif; font-size: 16px;">
+                        <b>Tipo</b>
+                        <hr>
+                    </td>
+                    <td style="color: #153643; font-family: Arial, sans-serif; font-size: 16px;">
+                        <b>Quantidade</b>
+                        <hr>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="color: #153643; font-family: Arial, sans-serif; font-size: 16px;">
+                        Onelio Mapinde
+                    </td>
+                    <td style="color: #153643; font-family: Arial, sans-serif; font-size: 16px;">
+                        VIP
+                    </td>
+                    <td style="color: #153643; font-family: Arial, sans-serif; font-size: 16px;">
+                        1
+                    </td>
+                </tr>
+
             </table>
+
         </td>
     </tr>
+</table>
+<hr>
+</td>
+</tr>
+<tr>
+    <td bgcolor="#ee4c50" style="padding: 30px 30px 30px 30px;">
+
+        <table border="0" cellpadding="0" cellspacing="0" width="100%">
+            <tr>
+                <td width="75%" style="color: #ffffff; font-family: Arial, sans-serif; font-size: 14px;">
+                    &reg; FireTicket, Maputo-Mozambique 2018<br/>
+                    Todos direitos reservados
+                </td>
+                <td align="right">
+                    <table border="0" cellpadding="0" cellspacing="0">
+                        <tr>
+                            <td>
+                                <a href="http://www.twitter.com/">
+                                    <img src="https://www.clipartmax.com/png/middle/12-128336_clipart-twitter-bird-free-images-at-clker-com-vector-twitter-logo.png" alt="Twitter" width="38" height="38" style="display: block;" border="0" />
+                                </a>
+                            </td>
+                            <td style="font-size: 0; line-height: 0;" width="20">&nbsp;</td>
+                            <td>
+                                <a href="http://www.twitter.com/">
+                                    <img src="images/fb.gif" alt="Facebook" width="38" height="38" style="display: block;" border="0" />
+                                </a>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </table>
+    </td>
+</tr>
 </table>
 </td>
 </tr>
